--- a/style.css
+++ b/style.css
@@ -3,4 +3,20 @@ body, html {
     height:100%;
     margin:0;
     padding:0;
+
+    font-family:arial, sans-serif;
+}
+
+#container  {
+    display:flex;
+    flex-direction:column;
+    background:red;
+}
+nav {
+    padding:6px;
+    height:48px;
+    display:flex;
+    justify-content:flex-end;
+    align-items:center;
+    font-size:13px;
 }
