--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body, html {
     height:100%;
     margin:0;
     padding:0;
-
     font-family:arial, sans-serif;
 }
 #container  {
@@ -49,4 +48,18 @@ nav a {
     border-radius:50px;
     padding:2px;
     box-shadow:0 0 0 2px #249A41
+}
+main {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+#logo img {
+    width:272px;
+    height:auto;
+
+}
+#search svg {
+    width:20px;
+    height:20px;
 }
