--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body, html {
 #container  {
     display:flex;
     flex-direction:column;
+    height:100%;
 }
 nav {
     padding:6px;
@@ -49,17 +50,49 @@ nav a {
     padding:2px;
     box-shadow:0 0 0 2px #249A41
 }
-main {
+#logo {
     display:flex;
     flex-direction:column;
     align-items:center;
+    justify-content:flex-end;
+    min-height: 92px;
+    max-height: 290px;
+    height: calc(100% - 560px);
 }
 #logo img {
     width:272px;
     height:auto;
-
+    
 }
-#search svg {
-    width:20px;
-    height:20px;
+#search {
+    max-width:584px;
+    margin:0 auto;
+    padding:20px;
+}
+#searchbar {
+    padding:0 14px;
+    border: 1px solid #dfe1e5;
+    border-radius:24px;
+    height:44px;
+    display:flex;
+    align-items:center;
+}
+#searchinput {
+    width:100%;
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    font-size: 16px;
+}
+.search-icon {
+    padding-right:13px;
+    color:#717479;
+}
+.mic-icon {
+    padding:0 8px;
+    width:24px;
+    cursor:pointer;
+    vertical-align:middle;
 }
