--- a/style.css
+++ b/style.css
@@ -102,3 +102,19 @@ nav a {
     cursor:pointer;
     vertical-align:middle;
 }
+#searchbar-buttons input[type="submit"] {
+background-color: #f8f9fa;
+border: 1px solid #f8f9fa;
+border-radius: 4px;
+color: #3c4043;
+font-family: arial,sans-serif;
+font-size: 14px;
+margin: 11px 4px;
+padding: 0 16px;
+line-height: 27px;
+height: 36px;
+min-width: 54px;
+text-align: center;
+cursor: pointer;
+user-select: none;
+}
