--- a/style.css
+++ b/style.css
@@ -1,89 +1,107 @@
-body, html {
-    min-width:400px;
-    height:100%;
-    margin:0;
-    padding:0;
-    font-family:arial, sans-serif;
+body,
+html {
+    min-width: 400px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: arial, sans-serif;
 }
-#container  {
-    display:flex;
-    flex-direction:column;
-    height:100%;
+
+#container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
+
 nav {
-    padding:6px;
-    height:48px;
-    display:flex;
-    justify-content:flex-end;
-    align-items:center;
-    font-size:13px;
+    padding: 6px;
+    height: 48px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 13px;
 }
+
 nav a {
-    text-decoration:none;
-    color:black;
+    text-decoration: none;
+    color: black;
 }
+
 #nav-links a {
-    padding-left:15px;
+    padding-left: 15px;
     line-height: 24px;
 }
+
 #nav-links {
-    padding-right:15px;
+    padding-right: 15px;
 }
+
 #nav-apps {
-    padding:4px;
+    padding: 4px;
 }
+
 #nav-apps a span {
-    padding:8px;
-    color:#717479
+    padding: 8px;
+    color: #717479
 }
+
 #nav-apps a span:hover {
-    background:rgba(60,64,67,0.08);;
-    border-radius:50%;
+    background: rgba(60, 64, 67, 0.08);
+    ;
+    border-radius: 50%;
 }
+
 #nav-user {
-    padding:6px;
+    padding: 6px;
 }
+
 #nav-user img {
-    width:32px;
-    height:32px;
-    border-radius:50px;
-    padding:2px;
-    box-shadow:0 0 0 2px #249A41
+    width: 32px;
+    height: 32px;
+    border-radius: 50px;
+    padding: 2px;
+    box-shadow: 0 0 0 2px #249A41
 }
+
 #logo {
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:flex-end;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
     min-height: 92px;
     max-height: 290px;
     height: calc(100% - 560px);
 }
+
 #logo img {
-    width:272px;
-    height:auto;
-    
+    width: 272px;
+    height: auto;
 }
+
 #search {
-    max-width:584px;
-    margin:0 auto;
-    padding:20px;
+    max-width: 584px;
+    margin: 0 auto;
+    padding: 20px;
 }
+
 #searchbar {
-    padding:0 14px;
+    padding: 0 14px;
     border: 1px solid #dfe1e5;
-    border-radius:24px;
-    height:44px;
-    display:flex;
-    align-items:center;
+    border-radius: 24px;
+    height: 44px;
+    display: flex;
+    align-items: center;
     transition: all ease 100ms;
 }
-#searchbar:hover, #searchbar:focus-within {
+
+#searchbar:hover,
+#searchbar:focus-within {
     box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
-    border-color: rgba(223,225,229,0);
+    border-color: rgba(223, 225, 229, 0);
 }
+
 #searchinput {
-    width:100%;
+    width: 100%;
     background-color: transparent;
     border: none;
     margin: 0;
@@ -91,30 +109,35 @@ nav a {
     outline: none;
     font-size: 16px;
 }
+
 .search-icon {
-    padding-right:13px;
+    padding-right: 13px;
     color: #9aa0a6;
     font-size: 21px !important;
 }
+
 .mic-icon {
-    padding:0 8px;
-    width:24px;
-    cursor:pointer;
-    vertical-align:middle;
+    padding: 0 8px;
+    width: 24px;
+    cursor: pointer;
+    vertical-align: middle;
 }
-#searchbar-buttons input[type="submit"] {
-background-color: #f8f9fa;
-border: 1px solid #f8f9fa;
-border-radius: 4px;
-color: #3c4043;
-font-family: arial,sans-serif;
-font-size: 14px;
-margin: 11px 4px;
-padding: 0 16px;
-line-height: 27px;
-height: 36px;
-min-width: 54px;
-text-align: center;
-cursor: pointer;
-user-select: none;
+
+#search-buttons {
+    padding-top: 18px;
+    display: flex;
+    justify-content: center;
+}
+
+#search-buttons input[type="submit"] {
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    color: #3c4043;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    height: 36px;
+    min-width: 54px;
+    cursor: pointer;
 }
