--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@ nav a:hover {
 
 #nav-apps a span {
     padding: 8px;
-    color: #717479
+    color: #717479;
+    transition: all ease 150ms;
 }
 
 #nav-apps a span:hover {
     background: rgba(60, 64, 67, 0.08);
-    ;
     border-radius: 50%;
 }
 
