--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav a:hover {
     height: 32px;
     border-radius: 50px;
     padding: 2px;
-    box-shadow: 0 0 0 2px #249A41
+    box-shadow: 0 0 0 2px #249A41;
 }
 
 #logo {
